@@ -1,3 +1,10 @@
+2012-03-11 Raphael Neider <rneider AT web.de>
+
+	* device/non-free/lib/pic16/libdev/pic18f1330.c:
+	  add dummy SSPBUF symbol as required by __stream_putchar/printf
+	* device/non-free/lib/pic16/libdev/testall.sh:
+	  test using printf_tiny() for greater confidence
+
 2012-03-14 Borut Razem <borut.razem AT gmail.com>
 
 	* debugger/mcs51/sdcdb.c, src/mcs51/gen.c, src/SDCCopt.c,
